# lane-detection

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: webcam.avi
include/: lane-detector.h  video-parser.h
launch/: lane_detection.launch  video-parser.launch
msg/: LaneInfo.msg
src/: lane-detection-main.cpp  lane-detector.cpp  video-parser.cpp
